--- a/src/html/style/main.css
+++ b/src/html/style/main.css
@@ -1,67 +1,193 @@
+/* SoucreCast v1.2 STYLE SHEET */
 @import url(/scarab/style/ns4_toxins.css);
 
+
+/* SoucreCast - styles start here */
 body {
 	background: white;
 	color: black;
-	margin:	0;
+	margin: 0;
 	padding: 0;
+	line-height: 140%; 
+	}
+a:link, a:visited {
+	color: blue; 
+	text-decoration: underline;
+	}
+a:active, a:hover {
+	color: red;
+	text-decoration: underline;
 	}
 body, div, p, th, td, li, dl, dd {
 	font-family: Lucida, Arial, Helvetica, sans-serif;
 	}
 h2, h3, h4 {
-	font-family:	Tahoma, Verdana, Lucida, Arial, Helvetica, sans-serif;
+	font-family: Tahoma, Verdana, Lucida, Arial, Helvetica, sans-serif;
 	}
-h2 {
- font-size: 1.5em
- }
 th, td {
- text-align: left;
- vertical-align: top 
- }
-td.right, th.right {
+	text-align: left;
+	vertical-align: top;
+ 	}
+.right {
 	text-align:	right;
 	}
-td.center, th.center {
+.center {
 	text-align:	center;
-	}
-#globalnav { 
-	font-weight: bold;
 	}
 #leftcol, #bodycol	{
 	vertical-align:	top;
 	}
-th {
-	background: #999;
-	color: #fff
+.app {
+	margin-right: 12px;
 	}
-.a td, .a th { 
+.app th {
+	background: #ccc;
+	color: black;
+	}
+.a td, .a th {
 	background: #efefef;
 	}
-.b td, .b th { 
+.b td, .b th {
 	background: #fff;
+	}
+.docs h2 {
+	color: #666;
+ 	}
+.docs h3 {
+	color: #333;
+ 	}
+.docs h4 {
+	color: #000;
+ 	}
+.courtesylinks {
+	margin-top: 2em; padding-top: 1em
+	}
+.alert {
+	background: #ff0;
+	font-weight: bold;
+	}
+.stb {
+	margin-top: 1em;
+	}
+.mtb {
+	margin-top: 2em;
+	}
+.note {
+	font-weight: normal;
+	}
+dd	{
+	margin-bottom: .67em;
+	}
+.x div, .x table {
+	margin-right: 24px;
+	}
+#footer { 
+	margin: 12px;
+	padding: 1px;
+	}
+	
+	
+#navcolumn {
+	color: gray;
+	line-height: 140%;
+	margin: 12px;
+	}
+#navcolumn strong, th {
+	color: black;
+	}
+#navcolumn div {
+	padding: 2px;
+	}
+#navcolumn table	{
+	margin-bottom: 1em;
+	}
+	
+	
+#banner h3 {
+	color: white;
+	padding: .5em;
+	margin: 0;
+	}
+#helptext {
+	margin-top: 2em;
+	margin: 12px;
+	}
+#helptext td div {
+	margin: .33em;
+	}
+	
+#sidebar {
+	margin-top: 2em;
+	margin: 12px;
+	}
+#sidebar td div {
+	margin: .33em;
+	}
+#sidebar p {
+	padding: 4px;
+	}
+#crumbbar td {
+	background: #efefef;
+	padding-left: 12px;
+	vertical-align:	middle;
+	}
+#crumbbar .searching {
+	text-align: right;
+	vertical-align:	top;
+	}
+/* SoucreCast - styles end here */
+
+/* Scarab/App - styles start here */
+#topmodule {
+	}
+#topmodule td {
+	background: #efefef;
+	padding-left: 12px;
+	vertical-align:	middle;
+	}	
+.functnbar {
+	vertical-align: middle;
+	padding: 3px;
+	margin-top: .5em;
+	}
+.functnbar th, .functnbar td {
+	color: #fff;
+	padding-left: 2px;
+	padding-right: 2px;
+	}
+.functnbar2 {
+	vertical-align: middle;
+	padding: 3px;
+	}
+.functnbar2 th, .functnbar2 td {
+	color: white;
+	padding-left: 2px;
+	padding-right: 2px;
+	}
+#tabs th {
+	padding-left: 7px;
+	padding-right: 7px;
+	}
+#tabs td {
+	padding-left: 7px;
+	padding-right: 7px;
 	}
 .datatablechild th {
 	background: #c3c3c3;
 	color: #000;
-	font-weight: normal
+	font-weight: bold;
 	}
-	.datatablechild tr.a td {
-	background: #cf9;
+	
+.dividers, .dividers table, .dividers td {
+	background: #99ccff;
+	vertical-align: middle;
 	}
 
 .axial th {
 	background: #efefef;
 	text-align: right;
-	color: black
+	color: black;
 	}
-.alert {
-	background: #ff0;
-	font-weight: bold
-	}
-.stb	{
-	margin-top: 1em;
-	}
-.mtb	{
-	margin-top: 2em;
-	}
+/* Scarab/App - styles end here */
+
+	
