for now, go to the links page after selecting a module...this 'feels' more complete than what the previous process was like...it really needs to be fixed to go to the page you really wanted, but the login step adds another step to take and you loose the information that you wanted. need to figure out a page stack system where you can have a sequence of steps to go through and have it remember the right nextTemplate...
-jon

--- a/src/templates/screens/SelectModule.vm
+++ b/src/templates/screens/SelectModule.vm
@@ -28,9 +28,9 @@
 #if ($userModules.size() > 0)
 <form action="$link.setPage("SelectModule.vm").setAction("SelectModule")" method="get">
 #if ($nextTemplate && $nextTemplate.length() > 0)
-<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="$nextTemplate" /> 
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="$nextTemplate"/> 
 #else 
-<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="SelectModule.vm" /> 
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="Links.vm"/> 
 #end
 
 <div class="axial">
