--- a/www/ui/csi/style/main.css
+++ b/www/ui/csi/style/main.css
@@ -1,141 +1,159 @@
-/* SoucreCast v1.2 STYLE SHEET */
+/* SourceCast v1.2 STYLE SHEET */
 @import url(ns4_toxins.css);
 
 
-/* SoucreCast - styles start here */
+/* SourceCast - styles start here */
 body {
 	background: white;
 	color: black;
-	margin: 0;
+	margin:	0;
 	padding: 0;
-	line-height: 140%; 
-	}
-a:link, a:visited {
-	color: blue; 
-	text-decoration: underline;
-	}
-a:active, a:hover {
-	color: red;
-	text-decoration: underline;
 	}
 body, div, p, th, td, li, dl, dd {
 	font-family: Lucida, Arial, Helvetica, sans-serif;
 	}
-h2, h3, h4 {
-	font-family: Tahoma, Verdana, Lucida, Arial, Helvetica, sans-serif;
+code, pre {
+	font-family:	'Andale Mono', Courier, monospace;
 	}
+h2, h3, h4 {
+	font-family:	Tahoma, Verdana, Helvetica, Arial, sans-serif;
+	}
+h2 {
+ font-size: 1.5em
+ }
 th, td {
-	text-align: left;
-	vertical-align: top;
- 	}
+ text-align: left;
+ vertical-align: top 
+ }
 .right {
 	text-align:	right;
 	}
 .center {
 	text-align:	center;
 	}
+#globalnav { 
+	font-weight: bold;
+	}
 #leftcol, #bodycol	{
 	vertical-align:	top;
 	}
-.app {
-	margin-right: 12px;
+#leftcol a:link, #leftcol a:visited {
+	color: blue; 
+	}
+a:active, a:hover {
+	color: #c00;
+	text-decoration: underline;
 	}
 .app th {
-	background: #ccc;
-	color: black;
+	background-color: #ccc;
 	}
-.a td, .a th {
+.a td { 
 	background: #efefef;
 	}
-.b td, .b th {
+.b td { 
 	background: #fff;
 	}
-.docs h2 {
-	color: #666;
- 	}
-.docs h3 {
-	color: #333;
- 	}
-.docs h4 {
+.datatablechild th {
+	background: #c3c3c3;
 	color: #000;
- 	}
-.courtesylinks {
-	margin-top: 2em; padding-top: 1em
+	font-weight: normal
+	}
+.datatablechild tr.a td {
+	background: #cf9;
+	}
+.axial th {
+	background-color: #efefef;
+	text-align: right;
+	color: black
 	}
 .alert {
-	background: #ff0;
-	font-weight: bold;
+	background: #ffc;
+	font-weight: bold
 	}
-.stb {
+.stb	{
 	margin-top: 1em;
 	}
-.mtb {
+.mtb	{
 	margin-top: 2em;
-	}
-.note {
-	font-weight: normal;
 	}
 dd	{
 	margin-bottom: .67em;
 	}
-.x div, .x table {
-	margin-right: 24px;
+#footer {
+ margin: 8px
+ }
+.username {
+	white-space: nowrap;
 	}
-#footer { 
-	margin: 12px;
-	padding: 1px;
-	}
-	
-	
-#navcolumn {
-	color: gray;
-	line-height: 140%;
-	margin: 12px;
-	}
-#navcolumn strong, th {
-	color: black;
-	}
-#navcolumn div {
-	padding: 2px;
-	}
-#navcolumn table	{
-	margin-bottom: 1em;
-	}
-	
-	
-#banner h3 {
+#login {
 	color: white;
-	padding: .5em;
-	margin: 0;
+	}
+#login .username {
+	font-weight: bold;
+	}
+#login a:link, #login a:visited {
+	color: white; 
+	text-decoration: underline;
+	}
+#login a:active, #login a:hover {
+	color: #ff0;
 	}
 #helptext {
-	margin-top: 2em;
-	margin: 12px;
+	margin-top: 2em
 	}
 #helptext td div {
-	margin: .33em;
+	margin: .5em
 	}
-	
-#sidebar {
-	margin-top: 2em;
-	margin: 12px;
+#helptext th {
+	background: #cc9;
 	}
-#sidebar td div {
-	margin: .33em;
+#helptext td {
+	background: #ffc;
 	}
-#sidebar p {
-	padding: 4px;
+.docs h2 { color: #666
+ }
+.docs h3 { color: #333
+ }
+.docs h4 { color: #000
+ }
+#leftcol a, .tabs a		{
+	text-decoration:	none;
 	}
-#crumbbar td {
-	background: #efefef;
-	padding-left: 12px;
-	vertical-align:	middle;
+.courtesylinks {
+	margin-top: 1em;
+	padding-top: 1em
 	}
-#crumbbar .searching {
-	text-align: right;
-	vertical-align:	top;
+#navcolumn div {
+ margin-bottom: .67em
+ }
+#navcolumn div div {
+ padding-left: 1em;
+ margin-bottom: 0
+ }
+#banner, #banner td { 
+	background: #369;
+	color: white;
 	}
-/* SoucreCast - styles end here */
+body #banner #login a { 
+	color: white;
+	}
+#banner h3 {
+	color: white;
+	padding: .25em;
+	margin: 0;
+	}
+.tabs th {
+	color: black;
+	background-color: #999;
+	padding-left: 7px;
+	padding-right: 7px;
+	}
+.tabs td {
+	background-color: #ccc;
+	padding-left: 7px;
+	padding-right: 7px;
+	}
+/* SourceCast - styles end here */
 
 /* Scarab/App - styles start here */
 #topmodule {
@@ -164,11 +182,11 @@ dd	{
 	padding-left: 2px;
 	padding-right: 2px;
 	}
-#tabs th {
+.tabs th {
 	padding-left: 7px;
 	padding-right: 7px;
 	}
-#tabs td {
+.tabs td {
 	padding-left: 7px;
 	padding-right: 7px;
 	}
