--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/scarab/style/print.css" media="print" />
   <link rel="alternate stylesheet" title="compact" type="text/css" href="/scarab/style/compact.css" />
  </head>
-<body>
+<body marginwidth="0" marginheight="0">
 	<div id="banner">
 		<table border="0" cellspacing="12" cellpadding="0" width="100%">
 		<tr>
